force-app/main/default/objects/Invoice_Line_Item__c/fields/Cancel_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Invoice__c</fullName>
    <label>Cancel Invoice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>