force-app/main/default/objects/Invoice_Line_Item__c/fields/Cash_Disc__c.field-meta.xml
<CustomField>
    <fullName>Cash_Disc__c</fullName>
    <label>Cash Disc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>