force-app/main/default/objects/Invoice_Line_Item__c/fields/Customer_Disc__c.field-meta.xml
<CustomField>
    <fullName>Customer_Disc__c</fullName>
    <label>Customer Disc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>