force-app/main/default/objects/Invoice_Line_Item__c/fields/Export_Value__c.field-meta.xml
<CustomField>
    <fullName>Export_Value__c</fullName>
    <label>Export Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>