force-app/main/default/objects/Invoice_Line_Item__c/fields/Invoice_Type__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Type__c</fullName>
    <label>Invoice Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INVOICE</fullName>
            </value>
            <value>
                <fullName>CREDIT NOTE</fullName>
            </value>
            <value>
                <fullName>DEBIT NOTE</fullName>
            </value>
            <value>
                <fullName>RETURN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>