force-app/main/default/objects/Invoice_Line_Item__c/fields/Material_Disc__c.field-meta.xml
<CustomField>
    <fullName>Material_Disc__c</fullName>
    <label>Material Disc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>