force-app/main/default/objects/Invoice_Line_Item__c/fields/Quantity_in_KG__c.field-meta.xml
<CustomField>
    <fullName>Quantity_in_KG__c</fullName>
    <label>Quantity in KG</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>