force-app/main/default/objects/Invoice_Line_Item__c/fields/Taxable_value__c.field-meta.xml
<CustomField>
    <fullName>Taxable_value__c</fullName>
    <label>Taxable value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>