force-app/main/default/objects/Invoice_Line_Item__c/fields/Total_GST__c.field-meta.xml
<CustomField>
    <fullName>Total_GST__c</fullName>
    <label>Total GST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>