force-app/main/default/objects/Invoice_Line_Item__c/fields/Value_in_Document_Currency__c.field-meta.xml
<CustomField>
    <fullName>Value_in_Document_Currency__c</fullName>
    <label>Value in Document Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>